--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,7 @@
 <head></head>
 <body>
   <a href="https://github.com/cloudfoundry-community/fetch_cf_cli"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+  <h2><%= cli_release_name %></h2>
   <ul>
     <% cli_release_asset_names_to_labels.each do |name, asset| %>
     <li>
