Don't show :80 in URL

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
   <p>OS X, Linux:</p>
 
   <pre>
-    curl -s <%= request_hostname %>install.sh | sh
+    curl -s <%= request_hostname %>/install.sh | sh
   </pre>
 
   <ul>
