--- a/views/install.erb
+++ b/views/install.erb
@@ -1,4 +1,5 @@
 cli_name="<%= cli_name %>"
+release_name="<%= cli_release_name %>"
 
 darwin_amd64_filename="<%= darwin_amd64_asset["name"] %>"
 darwin_amd64_url="<%= darwin_amd64_asset["url"] %>"
@@ -41,7 +42,7 @@ current_path=$(pwd)
 cd $tmp_unarchive_path
 
 if [[ "$(which curl)X" != "X" ]]; then
-  echo "Downloading via curl..."
+  echo "Downloading '$release_name' via curl..."
   curl -s -L -H "Accept: application/octet-stream" $download_url -o $filename
 fi
 
