--- a/views/install.erb
+++ b/views/install.erb
@@ -1,4 +1,3 @@
-cli_name="<%= cli_name %>"
 release_name="<%= cli_release_name %>"
 
 darwin_amd64_filename="<%= darwin_amd64_asset["name"] %>"
@@ -50,8 +49,10 @@ cd $current_path
 if [[ -f $filename ]]; then
   if [[ $filename =~ "tgz" ]]; then
     tar xf $filename
+    export cli_name=$(tar tf $filename | head -n 1)
   elif [[ $filename =~ "zip" ]]; then
     unzip $filename
+    export cli_name=$(unzip -l $filename | head -n 1)
   else
     echo "Oops, I do not know how to unpackage $filename."
     echo "Please create a ticket at https://github.com/cloudfoundry-community/fetch_cf_cli/issues/new"
