--- a/views/index.erb
+++ b/views/index.erb
@@ -4,11 +4,15 @@
   <a href="https://github.com/cloudfoundry-community/fetch_cf_cli"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
   <h2><%= cli_release_name %></h2>
 
+  <p>One-line command to download, unpackage the right Cloud Foundry CLI for your machine.</p>
+
   <p>OS X, Linux:</p>
 
   <pre>
     curl -s <%= request_hostname %>/install.sh | bash
   </pre>
+
+  <p>Windows: please help me</p>
 
 </body>
 </html>
