--- a/views/index.erb
+++ b/views/index.erb
@@ -1,18 +1,30 @@
-<html>
-<head></head>
-<body>
-  <a href="https://github.com/cloudfoundry-community/fetch_cf_cli"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-  <h2><%= cli_release_name %></h2>
+<div class="contain-to-grid">
+  <nav class="top-bar">
+    <ul class="title-area">
+      <!-- Title Area -->
+      <li class="name">Cloud Foundry CLI Installer</li>
+      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+    </ul>
 
-  <p>One-line command to download, unpackage the right Cloud Foundry CLI for your machine.</p>
+    <section class="top-bar-section">
+      <!-- Left Nav Section -->
+      <ul class="right">
+        <li><a href="https://github.com/cloudfoundry/cli">cli project</a></li>
+      </ul>
+    </section>
+  </nav>
+</div>
 
-  <p>OS X, Linux:</p>
+<a href="https://github.com/cloudfoundry-community/fetch_cf_cli"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+<h2><%= cli_release_name %></h2>
 
-  <pre>
-    curl -s <%= request_hostname %>/install.sh | bash
-  </pre>
+<p>One-line command to download, unpackage the right Cloud Foundry CLI for your machine.</p>
 
-  <p>Windows: please help me</p>
+<p>OS X, Linux:</p>
 
-</body>
-</html>
+<pre>
+  curl -s <%= request_hostname %>/install.sh | bash
+</pre>
+
+<p>Windows: please help me</p>
