--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
+<a href="https://github.com/cloudfoundry-community/fetch_cf_cli"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 <div class="contain-to-grid">
   <nav class="top-bar">
     <ul class="title-area">
@@ -16,15 +17,26 @@
   </nav>
 </div>
 
-<a href="https://github.com/cloudfoundry-community/fetch_cf_cli"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-<h2><%= cli_release_name %></h2>
+<div class="row">
+  <div class="large-8 columns">
+    <h2><%= cli_release_name %></h2>
 
-<p>One-line command to download, unpackage the right Cloud Foundry CLI for your machine.</p>
+    <p>One-line command to download, unpackage the right Cloud Foundry CLI for your machine.</p>
 
-<p>OS X, Linux:</p>
+    <p>OS X, Linux:</p>
 
-<pre>
-  curl -s <%= request_hostname %>/install.sh | bash
-</pre>
+    <pre>
+curl -s <%= request_hostname %>/install.sh | bash
+    </pre>
 
-<p>Windows: please help me</p>
+    <p>Windows:</p>
+    <p>Click to download:
+      <a download="<%= cli_release_asset_windows_amd64['name'] %>" href="<%= cli_release_asset_windows_amd64['url'] %>">64bit</a>
+      |
+      <a download="<%= cli_release_asset_windows_386['name'] %>" href="<%= cli_release_asset_windows_386['url'] %>">32bit</a>
+    </p>
+  </div>
+  <div class="large-4 columns">
+    
+  </div>
+</div>
