add cf community logo

--- a/views/index.erb
+++ b/views/index.erb
@@ -18,11 +18,14 @@
 </div>
 
 <div class="row">
-  <div class="large-8 columns">
+  <div class="large-12 columns">
     <h2><%= cli_release_name %></h2>
 
     <p>One-line command to download, unpackage the right Cloud Foundry CLI for your machine.</p>
-
+  </div>
+</div>
+<div class="row">
+  <div class="large-8 columns">
     <p>OS X, Linux:</p>
 
     <pre>
@@ -37,6 +40,6 @@ curl -s <%= request_hostname %>/install.sh | bash
     </p>
   </div>
   <div class="large-4 columns">
-    
+    <img src="/images/cloudfoundry-community.png">
   </div>
 </div>
