--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,48 +1,16 @@
 <!DOCTYPE html>
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <title>Foundation 4</title>
-
-  <link rel="stylesheet" href="stylesheets/normalize.css" />
-  <link rel="stylesheet" href="stylesheets/app.css" />
-
-  <script src="javascripts/vendor/custom.modernizr.js"></script>
-
-  <script type="text/javascript" src="//use.typekit.net/mxf4zfx.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="dc.creator" content="Rémi Prévost - http://exomel.com" />
+  <title>Homebrew — MacPorts driving you to drink? Try Homebrew!</title>
+  <link rel="stylesheet" href="./stylesheets/screen.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="./stylesheets/fonts/chunkfive.css" type="text/css" media="screen" />
 </head>
 <body>
 
   <%=yield%>
 
-  <script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? 'javascripts/vendor/zepto' : 'javascripts/vendor/jquery') +
-  '.js><\/script>')
-  </script>
-  
-  <script src="javascripts/foundation/foundation.js"></script>
-  <script src="javascripts/foundation/foundation.alerts.js"></script>
-  <script src="javascripts/foundation/foundation.clearing.js"></script>
-  <script src="javascripts/foundation/foundation.cookie.js"></script>
-  <script src="javascripts/foundation/foundation.dropdown.js"></script>
-  <script src="javascripts/foundation/foundation.forms.js"></script>
-  <script src="javascripts/foundation/foundation.joyride.js"></script>
-  <script src="javascripts/foundation/foundation.magellan.js"></script>
-  <script src="javascripts/foundation/foundation.orbit.js"></script>
-  <script src="javascripts/foundation/foundation.placeholder.js"></script>
-  <script src="javascripts/foundation/foundation.reveal.js"></script>
-  <script src="javascripts/foundation/foundation.section.js"></script>
-  <script src="javascripts/foundation/foundation.tooltips.js"></script>
-  <script src="javascripts/foundation/foundation.topbar.js"></script>
-  
-  
-  <script>
-    $(document).foundation();
-  </script>
+  <a href="https://github.com/cloudfoundry-community/fetch_cf_cli"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 </body>
 </html>
