--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,10 +2,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="dc.creator" content="Rémi Prévost - http://exomel.com" />
-  <title>Homebrew — MacPorts driving you to drink? Try Homebrew!</title>
+  <title>Cloud Foundry CLI</title>
   <link rel="stylesheet" href="./stylesheets/screen.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="./stylesheets/fonts/chunkfive.css" type="text/css" media="screen" />
+  <script type="text/javascript">
+    function selectText() {
+        if (document.selection) {
+            var range = document.body.createTextRange();
+            range.moveToElementText(document.getElementById('selectable'));
+            range.select();
+        } else if (window.getSelection) {
+            var range = document.createRange();
+            range.selectNode(document.getElementById('selectable'));
+            window.getSelection().addRange(range);
+        }
+    }
+  </script>
 </head>
 <body>
 
