--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -8,17 +8,17 @@ body {
   font-size: 150%;
   line-height: 1.4;
   color: #f6e6cc;
-  background: #27221a;
+  background: #68A0D1;
   position: relative;
   padding: 0 30px;
 }
 
 p,ul,ol,dl,table,pre { margin-bottom: 1em; }
 ul { margin-left: 20px; }
-a { text-decoration: none; cursor: pointer; color: #ba832c; font-weight: bold; }
+a { text-decoration: none; cursor: pointer; color: #2C3F7D; font-weight: bold; }
 a:focus { outline: 1px dotted; }
 a:visited {  }
-a:hover, a:focus { color: #d3a459; text-decoration: none; }
+a:hover, a:focus { color: #f6e6cc; text-decoration: none; }
 a *, button * { cursor: pointer; }
 hr { display: none; }
 small { font-size: 90%; }
@@ -31,8 +31,8 @@ button::-moz-focus-inner { border: 0; padding: 1px; }
 span.amp { font-family: Baskerville, "Goudy Old Style", "Palatino", "Book Antiqua", serif; font-weight: normal; font-style: italic; font-size: 1.2em; line-height: 0.8; }
 h1,h2,h3,h4,h5,h6 { line-height: 1.1; }
 
-::selection { background: #745626; }
-::-moz-selection { background: #745626; }
+::selection { background: #6473F0; }
+::-moz-selection { background: #6473F0; }
 
 h1, h2 {
   font-size: 420%;
@@ -45,20 +45,20 @@ h1, h2 {
 h2 {
 	font-size: 300%;
 	text-align: center;
-	color: #d7af72;
+	color: #063B7F;
 	margin-top: 0.5em;
 	margin-bottom: 0.1em;
 }
 
 h1 a,
 h1 a:hover {
-  color: #d7af72;
+  color: #063B7F;
   font-weight: normal;
   text-decoration: none;
 }
 
 #subtitle {
-  color: #a1804c;
+  color: #2C3F7D;
 }
 
 #wrap {
@@ -130,7 +130,7 @@ pre code {
 }
 
 #informations .button a {
-  background: rgba(162,107,20,0.3);
+  background: #A7BDDB;
   padding: 8px 10px 6px;
   border-radius: 0.4em;
   -moz-border-radius: 0.4em;
@@ -143,7 +143,7 @@ pre code {
 }
 
 #informations .button a:hover {
-  background: rgba(162,107,20,0.25);
+  background: #A7BDDB;
 }
 
 #informations .button-large {
