attributions to Pivotal & Remi & Stark/Wayne

--- a/views/index.erb
+++ b/views/index.erb
@@ -82,6 +82,12 @@
           </div>
         </div>
       </li>
+
+      <li>
+        <div class="group row credits">
+          <p>Cloud Foundry sponsored by <a href="http://gopivotal.com/">Pivotal</a>. This installer project by <a href="http://starkandwayne.com">Stark &amp; Wayne</a> and <a href="http://drnicwilliams.com">Dr Nic Williams</a>. Original website for <a href="http://brew.sh/">Homebrew</a> by <a href="http://exomel.com">Rémi Prévost</a>. </p>
+        </div>
+      </li>
     </ul>
   </div>
 </div>
