--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="dc.creator" content="Rémi Prévost - http://exomel.com" />
   <title>Cloud Foundry CLI</title>
   <link rel="stylesheet" href="./stylesheets/screen.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="./stylesheets/fonts/chunkfive.css" type="text/css" media="screen" />
