If in dev mode; include target API in curl|bash command

--- a/views/index.erb
+++ b/views/index.erb
@@ -43,7 +43,7 @@
       <li>
         <div class="group row">
           <h2>Install CLI for OS/X and Linux</h2>
-          <pre style="clear:both;text-align:center;margin:0 -3em;margin-bottom:0.9em"><code id="selectable" onclick="selectText()">curl -s <%= binscript_path %> | bash</code></pre>
+          <pre style="clear:both;text-align:center;margin:0 -3em;margin-bottom:0.9em"><code id="selectable" onclick="selectText()">curl -s <%= curl_cmd %> | bash</code></pre>
           <div class="col-1">
             <p>Paste that at a Terminal prompt.</p>
           </div>
